--- a/src/Styles/NuestrosOrigenes.module.css
+++ b/src/Styles/NuestrosOrigenes.module.css
@@ -42,6 +42,11 @@
   text-align: center;
 }
 
+@media (max-width: 768px) {
+  .subtitle {
+    color: #000;
+  }
+}
 /* Contenedor de cards */
 .cardsContainer {
   display: grid;
