--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -32,7 +33,7 @@ body {
 body {
   background: url("https://res.cloudinary.com/deek9levs/image/upload/v1757607317/Sabana_Web_Corregida_1_ohvrfv.png")
     no-repeat top center;
-  background-size: cover; 
+  background-size: cover;
   background-attachment: scroll;
   color: var(--foreground);
   font-family: var(--font-handlee), Arial, Helvetica, sans-serif;
